<resources>
    <string name="map_api_key">Dairy Farm</string>
    <string name="app_name">Dairy Farm</string>
    <string name="common_no_internet">No Internet Connection, Please Try Again Later!</string>
    <string name="common_something_went_wrong">Something Went Wrong, Please Try Again Later!</string>
    <string name="common_volley_network_error">Network Error!</string>
    <string name="common_volley_no_connection_error">No connection to server!</string>
    <string name="common_volley_server_error">Server Error!</string>
    <string name="common_volley_timeout_error">Connection Timeout Error!</string>
    <string name="common_volley_error">Error!</string>
    <string name="search_speech_prompt">Say something&#8230;</string>
    <string name="search_speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="splash_no_internet_connection">No Internet Connection!</string>
    <string name="splash_retry">Retry</string>
    <string name="splash_version_text">v</string>
    <string name="no_internet_title_text">Oh...!!</string>
    <string name="no_internet_description_text">Please Check Your Internet Connection &amp; Try Again Later!</string>
    <string name="no_internet_retry_button_text">Retry</string>
    <string name="no_record_found_title_text">Oh...!!</string>
    <string name="success_title_text">Success !</string>
    <string name="login_title_text">Sign In</string>
    <string name="login_email_input_hint_text">Email ID</string>
    <string name="login_password_input_hint_text">Password</string>
    <string name="login_button_text">Sign In</string>
    <string name="login_skip_login_text">Skip</string>
    <string name="login_password_validation_empty_password_error_message_text">Please enter password</string>
    <string name="login_password_validation_invalid_password_error_message_text">Your password must be at least 8 characters long</string>
    <string name="login_email_validation_empty_email_error_message_text">Please enter email</string>
    <string name="login_email_validation_invalid_email_error_message_text">Please enter valid email</string>
    <string name="sign_up_title_text">Sign Up</string>
    <string name="sign_up_name_input_hint_text">Name</string>
    <string name="sign_up_email_input_hint_text">Email</string>
    <string name="sign_up_country_code_input_hint_text">+91</string>
    <string name="sign_up_mobile_input_hint_text">Mobile Number</string>
    <string name="sign_up_password_input_hint_text">Password</string>
    <string name="sign_up_confirm_password_input_hint_text">Confirm Password</string>
    <string name="sign_up_gender_text">Gender :</string>
    <string name="sign_up_gender_male_text">Male</string>
    <string name="sign_up_female_text">Female</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="sign_up_gender_validation_error_toast_text">Please select at least one gender</string>
    <string name="sign_up_name_validation_empty_name_error_message_text">Please enter name</string>
    <string name="sign_up_email_validation_empty_email_error_message_text">Please enter email</string>
    <string name="sign_up_email_validation_invalid_email_error_message_text">Please enter valid email</string>
    <string name="sign_up_password_validation_invalid_password_error_message_text">Please Enter Password</string>
    <string name="sign_up_password_validation_invalid_length_password_error_message_text">Please enter password in at least 8 characters long range</string>
    <string name="sign_up_password_validation_invalid_confirm_password_error_message_text">Please Enter Confirm Password</string>
    <string name="sign_up_password_validation_invalid_length_confirm_password_error_message_text">Please enter confirm password in at least 6 characters long range</string>
    <string name="sign_up_password_validation_password_not_matched_error_message_toast_text">Passwords does not matched</string>
    <string name="sign_up_mobile_validation_empty_mobile_error_message_text">Please enter mobile number</string>
    <string name="sign_up_mobile_validation_invalid_mobile_error_message_text">Please enter valid mobile number</string>
    <string name="forgot_password_title_text">Forgot Password</string>
    <string name="forgot_password_description_text">Please enter your registered email id below on which you will receive otp via email to proceed further and complete the process of resetting your forgotten password.</string>
    <string name="forgot_password_email_input_hint_text">Email ID</string>
    <string name="forgot_password_button_text">Submit</string>
    <string name="forgot_password_email_validation_empty_email_error_message_text">Please enter email</string>
    <string name="forgot_password_email_validation_invalid_email_error_message_text">Please enter valid email</string>
    <string name="forgot_password_otp_verification_title_text">Otp Verification</string>
    <string name="forgot_password_otp_verification_description_text">Please enter 6 Digit Code that we have sent you via email on following email id to proceed.</string>
    <string name="forgot_password_otp_verification_button_text">Verify Otp</string>
    <string name="forgot_password_otp_verification_resend_otp_in_text">Resend OTP Email in</string>
    <string name="forgot_password_otp_verification_otp_not_received_text">Didn\'t Received OTP ?</string>
    <string name="forgot_password_otp_verification_resend_otp_text">Resend OTP</string>
    <string name="reset_password_title_text">Reset Password</string>
    <string name="reset_password_description_text">All done now try setting new strong password and complete the password reset process for your forgotten password</string>
    <string name="reset_password_new_password_input_hint_text">New Password</string>
    <string name="reset_password_confirm_new_password_input_hint_text">Confirm New Password</string>
    <string name="reset_password_button_text">Reset Password</string>
    <string name="reset_password_validation_invalid_password_error_message_text">Please Enter Password</string>
    <string name="reset_password_validation_invalid_length_password_error_message_text">Please enter new password in at least 8 characters long range</string>
    <string name="reset_password_validation_invalid_confirm_password_error_message_text">Please Enter Confirm Password</string>
    <string name="reset_password_validation_invalid_length_confirm_password_error_message_text">Please enter confirm password in at least 6 characters long range</string>
    <string name="reset_password_validation_password_not_matched_error_message_toast_text">Passwords does not matched</string>
    <string name="bottom_navigation_drawer_one_text">Home</string>
    <string name="bottom_navigation_drawer_two_text">Categories</string>
    <string name="bottom_navigation_drawer_three_text">Account</string>
    <string name="bottom_navigation_drawer_four_text">Help</string>
    <string name="home_press_back_again_to_exit_text">Press back again to exit.</string>
    <string name="home_fragment_title_text">Home</string>
    <string name="home_fragment_search_bar_hint">Search for fresh dairy products</string>
    <string name="home_fragment_delivery_standard_time_text">Standard TIME</string>
    <string name="home_fragment_delivery_delivery_text">Delivery</string>
    <string name="home_fragment_delivery_time_text">Time</string>
    <string name="category_fragment_title_text">Categories</string>
    <string name="category_fragment_search_bar_hint">Search by category name</string>
    <string name="products_list_row_out_of_stock_text">Out Of Stock!</string>
    <string name="products_list_row_notify_text">Notify</string>
    <string name="products_list_row_cart_string_text">Out Of Stock!</string>
    <string name="products_list_row_add_text">Add</string>
    <string name="products_list_row_customizable_text">*Customizable</string>
    <string name="products_list_row_on_offer_text">On Offer</string>
    <string name="products_list_row_is_featured_text">Featured</string>
    <string name="products_variance_choice_header_title_text">Choice Of Variance For</string>
    <string name="products_variance_choice_item_total_text">Item Total</string>
    <string name="products_variance_choice_add_item_text">Add Item</string>
    <string name="products_variance_choice_add_item_not_selected_text">Add Item</string>
    <string name="products_variance_choice_add_item_notify_me_text">Notify Me</string>
    <string name="product_variance_option_chooser_previous_selection_title">Your previous selection</string>
    <string name="product_variance_option_chooser_i_will_choose_button_title">I\'ll Choose</string>
    <string name="product_variance_option_chooser_repeat_button_title">Repeat</string>
    <string name="multiple_customization_user_confirmation_title_text">Remove Item from cart</string>
    <string name="multiple_customization_user_confirmation_description_text">This item has multiple variances added.Proceed to cart to remove item ?</string>
    <string name="multiple_customization_user_confirmation_positive_button_text">Yes</string>
    <string name="multiple_customization_user_confirmation_negative_button_text">No</string>
    <string name="remove_product_from_cart_confirmation_title_text">Confirmation</string>
    <string name="remove_product_from_cart_confirmation_description_text">Are you sure want to remove this product from your cart?</string>
    <string name="remove_product_from_cart_confirmation_positive_button_text">Yes</string>
    <string name="remove_product_from_cart_confirmation_negative_button_text">No</string>
    <string name="product_details_title_text">Product Details</string>
    <string name="product_details_on_offer_text">On Offer</string>
    <string name="product_details_packet_size_text">Packet Size</string>
    <string name="product_details_description_text">Description</string>
    <string name="product_details_add_to_wishlist_text">Add to Wishlist</string>
    <string name="product_details_view_wishlist_text">View Wishlist</string>
    <string name="product_details_add_to_cart_text">Add To Cart</string>
    <string name="product_details_view_cart_text">View Cart</string>
    <string name="product_details_add_to_cart_not_selected_text">Add To Cart</string>
    <string name="product_details_share_product_link_take_look_at_text">\nPlease Take a Look At</string>
    <string name="product_details_share_product_link_on_text">on</string>
    <string name="product_details_share_product_double_new_line_text">\n\n</string>
    <string name="product_details_choose_option_to_share_text">Choose Option to Share</string>
    <string name="product_details_something_went_wrong_while_sharing_text">Oops! Something Went Wrong While Performing Sharing Operation</string>
    <string name="product_image_details_no_image_for_product_text">No Images Available For this Product</string>
    <string name="cart_title_text">Cart</string>
    <string name="cart_fruits_and_vegetable_title_text">Dairy Farm Items</string>
    <string name="cart_coupons_title_text">Coupons</string>
    <string name="cart_coupons_have_coupon_code_text">Have Coupon Code?</string>
    <string name="cart_coupons_apply_coupon_code_text">Apply Coupon Code</string>
    <string name="cart_coupons_offer_coupon_applier_on_bill_text">Offer Applied On the bill</string>
    <string name="cart_address_title_text">Address</string>
    <string name="cart_address_no_address_it_seems_to_be_no_address_added_text">It seems to be no address added</string>
    <string name="cart_address_add_new_address_to_proceed_text">Add new address to proceed</string>
    <string name="cart_address_add_new_address_button_text">Add New Address</string>
    <string name="cart_address_no_default_address_text">No default address detected</string>
    <string name="cart_address_select_address_to_proceed_text">Select address to proceed</string>
</resources>