<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llNoInternetConnection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_no_internet_connection" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/no_internet_title_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="26dp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:lineSpacingExtra="0dp"
            android:text="@string/no_internet_description_text"
            android:textColor="@color/colorBlackThree"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnRetry"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/gradient_button_bg"
            android:clickable="true"
            android:elevation="10dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/no_internet_retry_button_text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>