<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iVBack"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:elevation="30dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24"
                    app:tint="@color/colorDark"
                    android:visibility="visible" />

                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="20dp"
                    android:elevation="30dp"
                    android:src="@drawable/app_icon"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="-20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/sign_up_title_text"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="32dp"
                    android:textStyle="italic" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="35dp"
                    android:background="@drawable/login_card_bg"
                    android:elevation="30dp"
                    android:orientation="vertical"
                    android:paddingTop="25dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="25dp"
                        android:textColorHint="@color/colorEditTextLayoutHintColor"
                        android:theme="@style/TextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:hint="@string/sign_up_name_input_hint_text"
                            android:inputType="text"
                            android:imeOptions="actionNext"
                            android:maxLines="1"
                            android:textColor="@color/colorEditTextTextColor"
                            android:theme="@style/TextInputEditText" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="25dp"
                        android:textColorHint="@color/colorEditTextLayoutHintColor"
                        android:theme="@style/TextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:hint="@string/sign_up_email_input_hint_text"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="@color/colorEditTextTextColor"
                            android:theme="@style/TextInputEditText" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="25dp">


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/country_code_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/colorEditTextLayoutHintColor"
                            android:theme="@style/TextInputLayout">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etCountryCode"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif"
                                android:text="@string/sign_up_country_code_input_hint_text"
                                android:digits="0123456789"
                                android:paddingEnd="10dp"
                                android:paddingStart="10dp"
                                android:drawableStart="@drawable/ic_india_flag"
                                android:drawablePadding="5dp"
                                android:layout_marginEnd="5dp"
                                android:inputType="phone"
                                android:maxLines="1"
                                android:textColor="@color/colorEditTextTextColor"
                                android:theme="@style/TextInputEditText"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/mobile_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/colorEditTextLayoutHintColor"
                            android:theme="@style/TextInputLayout">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etMobile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif"
                                android:hint="@string/sign_up_mobile_input_hint_text"
                                android:digits="0123456789"
                                android:inputType="phone"
                                android:imeOptions="actionNext"
                                android:maxLength="10"
                                android:maxLines="1"
                                android:textColor="@color/colorEditTextTextColor"
                                android:theme="@style/TextInputEditText" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="25dp"
                        android:textColorHint="@color/colorEditTextLayoutHintColor"
                        android:theme="@style/TextInputLayout"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/PasswordToggleTintColor">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/sign_up_password_input_hint_text"
                            android:fontFamily="sans-serif"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:imeOptions="actionNext"
                            android:textColor="@color/colorEditTextTextColor"
                            android:theme="@style/TextInputEditText" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirm_password_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="25dp"
                        android:textColorHint="@color/colorEditTextLayoutHintColor"
                        android:theme="@style/TextInputLayout"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/PasswordToggleTintColor">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:hint="@string/sign_up_confirm_password_input_hint_text"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:imeOptions="actionDone"
                            android:textColor="@color/colorEditTextTextColor"
                            android:theme="@style/TextInputEditText" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="sans-serif"
                            android:gravity="center"
                            android:text="@string/sign_up_gender_text"
                            android:layout_marginEnd="5dp"
                            android:textColor="@color/colorBlack"
                            android:textSize="18dp"
                            android:visibility="gone" />

                        <RadioButton
                            android:id="@+id/rbMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_up_gender_male_text"
                            android:layout_marginStart="5dp"
                            android:padding="5dp"
                            android:button="@drawable/ic_male"
                            android:layout_gravity="center"
                            android:textSize="16dp"></RadioButton>

                        <RadioButton
                            android:id="@+id/rbFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_up_female_text"
                            android:padding="5dp"
                            android:layout_marginStart="15dp"
                            android:button="@drawable/ic_female"
                            android:layout_gravity="center"
                            android:textSize="16dp"></RadioButton>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="15dp">

                        <Button
                            android:id="@+id/btnSignUp"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="25dp"
                            android:layout_marginEnd="25dp"
                            android:layout_marginBottom="25dp"
                            android:background="@drawable/gradient_button_bg"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center"
                            android:text="@string/sign_up_button_text"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="18dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>